Mensagem do commit

--- a/enviada.html
+++ b/enviada.html
@@ -9,7 +9,7 @@
     <title>Email enviado!</title>
 </head>
 <body>
-  <h1><a href="index.html"><img src="assets/img/sucesso-bg.gif"></a></h1>
+  <h1><a href="index.html"><img src="assets/img/enviada.png"></a></h1>
 
     <!-- Script de redirecionamento automático -->
     <h1 id="counterarea"></h1>
@@ -22,7 +22,7 @@
           counter = counter - 1;
           document.getElementById("counterarea").innerHTML = counter;
           if(counter === 0){
-            window.location.href = 'https://bencash.com.br/enviada.html';
+            window.location.href = 'https://bencash.com.br/';
           }
         }, 1000);
         
